# tegaki-oxim

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  configure  configure.ac
po/: Makefile  Makefile.in  Makefile.in.in  Makevars  Makevars.in  POTFILES  POTFILES.in  tegaki-oxim.pot  zh_TW.gmo  zh_TW.po
